cfn_benchmark/cfn_templates/rubenmorangarcia__TFG_EIF_MORAN_GARCIA_RUBEN/Plantillas_Despliegue_CloudFormation/parte3.yaml
Description: Parte 3 - Rutas para inspección centralizada con GWLB en flujos Norte, Este y Oeste

Parameters:
  TGWId:
    Type: String
    Description: ID del Transit Gateway

  GWLBEIdFirewallNorte:
    Type: String
    Description: ID del VPC Endpoint (GWLBE) del firewall de inspección Norte

  GWLBEIdFirewallEste:
    Type: String
    Description: ID del VPC Endpoint (GWLBE) del firewall de inspección Este

  GWLBEIdFirewallOeste:
    Type: String
    Description: ID del VPC Endpoint (GWLBE) del firewall de inspección Oeste

Resources:

  # Rutas VPC-Inspeccion Este
  RouteTableInsideNorte:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !ImportValue VPCInspeccionNorteId
      Tags:
        - Key: Name
          Value: RT-INSIDE-Inspeccion-Norte

  AssociationInsideNorte:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !ImportValue InsideSubnetNorteId
      RouteTableId: !Ref RouteTableInsideNorte

  RouteInsideToGWLBIPv4:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableInsideNorte
      DestinationCidrBlock: 0.0.0.0/0
      VpcEndpointId: !Ref GWLBEIdFirewallNorte

  RouteInsideToGWLBIPv6:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableInsideNorte
      DestinationIpv6CidrBlock: ::/0
      VpcEndpointId: !Ref GWLBEIdFirewallNorte

  RouteTableOutsideNorte:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !ImportValue VPCInspeccionNorteId
      Tags:
        - Key: Name
          Value: RT-OUTSIDE-Inspeccion-Norte

  AssociationOutsideNorte:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !ImportValue OutsideSubnetNorteId
      RouteTableId: !Ref RouteTableOutsideNorte

  RouteOutsideDefaultIPv4:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableOutsideNorte
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !ImportValue NAT64GatewayInspeccionNorteId

  RouteOutsideDefaultIPv6:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableOutsideNorte
      DestinationIpv6CidrBlock: "64:ff9b::/96"
      NatGatewayId: !ImportValue NAT64GatewayInspeccionNorteId

  RouteToIPv6OnlyFromOutside:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableOutsideNorte
      DestinationCidrBlock: 10.10.0.0/16
      TransitGatewayId: !Ref TGWId

  RouteToDualStackFromOutside:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableOutsideNorte
      DestinationCidrBlock: 10.20.0.0/16
      TransitGatewayId: !Ref TGWId

  RouteTableNAT64Norte:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !ImportValue VPCInspeccionNorteId
      Tags:
        - Key: Name
          Value: RT-NAT64-Inspeccion-Norte

  AssociationNAT64Norte:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !ImportValue NAT64SubnetNorteId
      RouteTableId: !Ref RouteTableNAT64Norte

  RouteNAT64ToInternet:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableNAT64Norte
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !ImportValue NATGatewayPublicInspeccionNorteId

  RouteNAT64ToIPv6OnlyIPv4:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableNAT64Norte
      DestinationCidrBlock: 10.10.0.0/16
      VpcEndpointId: !Ref GWLBEIdFirewallNorte

  RouteNAT64ToIPv6OnlyIPv6:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableNAT64Norte
      DestinationIpv6CidrBlock: "CIDR IPV6 VPC"
      VpcEndpointId: !Ref GWLBEIdFirewallNorte

  RouteNAT64ToDualStackIPv4:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableNAT64Norte
      DestinationCidrBlock: 10.20.0.0/16
      VpcEndpointId: !Ref GWLBEIdFirewallNorte

  RouteNAT64ToDualStackIPv6:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableNAT64Norte
      DestinationIpv6CidrBlock: "CIDR DUAL STACK VPC"
      VpcEndpointId: !Ref GWLBEIdFirewallNorte

  RouteTablePublicNorte:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !ImportValue VPCInspeccionNorteId
      Tags:
        - Key: Name
          Value: RT-PUBLIC-Inspeccion-Norte

  AssociationPublicNorte:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !ImportValue PublicSubnetNorteId
      RouteTableId: !Ref RouteTablePublicNorte

  RoutePublicToInternet:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTablePublicNorte
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !ImportValue IGWInspeccionNorteId

  # Rutas VPC-Inspeccion Este
  RouteTableInsideEste:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !ImportValue VPCInspeccionEsteId
      Tags:
        - Key: Name
          Value: RT-INSIDE-Inspeccion-Este

  AssociationInsideEste:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !ImportValue InsideSubnetInspeccionEsteId
      RouteTableId: !Ref RouteTableInsideEste

  RouteInsideToGWLBIPv4Este:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableInsideEste
      DestinationCidrBlock: 0.0.0.0/0
      VpcEndpointId: !Ref GWLBEIdFirewallEste

  RouteInsideToGWLBIPv6Este:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableInsideEste
      DestinationIpv6CidrBlock: "::/0"
      VpcEndpointId: !Ref GWLBEIdFirewallEste

  RouteTableOutsideEste:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !ImportValue VPCInspeccionEsteId
      Tags:
        - Key: Name
          Value: RT-OUTSIDE-Inspeccion-Este

  AssociationOutsideEste:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !ImportValue OutsideSubnetInspeccionEsteId
      RouteTableId: !Ref RouteTableOutsideEste

  RouteOutsideToNAT64IPv6Este:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableOutsideEste
      DestinationIpv6CidrBlock: 64:ff9b::ac10:0/112
      NatGatewayId: !ImportValue NAT64GatewayInspeccionEsteId

  RouteOutsideToOnPremEste:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableOutsideEste
      DestinationCidrBlock: 172.16.0.0/16
      TransitGatewayId: !Ref TGWId

  RouteOutsideToIPv6VPCEste:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableOutsideEste
      DestinationCidrBlock: 10.10.0.0/16
      TransitGatewayId: !Ref TGWId

  RouteOutsideToDualStackVPCEste:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableOutsideEste
      DestinationCidrBlock: 10.20.0.0/16
      TransitGatewayId: !Ref TGWId

  RouteTableNAT64Este:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !ImportValue VPCInspeccionEsteId
      Tags:
        - Key: Name
          Value: RT-NAT64-Inspeccion-Este

  AssociationNAT64Este:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !ImportValue NAT64SubnetInspeccionEsteId
      RouteTableId: !Ref RouteTableNAT64Este

  RouteNAT64ToOnPremEste:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableNAT64Este
      DestinationCidrBlock: 172.16.0.0/16
      TransitGatewayId: !Ref TGWId

  RouteNAT64ToIPv6OnlyEste:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableNAT64Este
      DestinationIpv6CidrBlock: CIDR VPC IPv6 PRO
      TransitGatewayId: !Ref TGWId

  RouteNAT64ToDualStackEste:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableNAT64Este
      DestinationIpv6CidrBlock: CIDR VPC DualStackPro
      TransitGatewayId: !Ref TGWId

  # Rutas VPC-Inspeccion Oeste
  RouteTableInsideOeste:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !ImportValue VPCInspeccionOesteId
      Tags:
        - Key: Name
          Value: RT-INSIDE-Inspeccion-Oeste

  AssociationInsideOeste:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !ImportValue InsideSubnetInspeccionOesteId
      RouteTableId: !Ref RouteTableInsideOeste

  RouteInsideToGWLBIPv4Oeste:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableInsideOeste
      DestinationCidrBlock: 0.0.0.0/0
      VpcEndpointId: !Ref GWLBEIdFirewallOeste

  RouteInsideToGWLBIPv6Oeste:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableInsideOeste
      DestinationIpv6CidrBlock: "::/0"
      VpcEndpointId: !Ref GWLBEIdFirewallOeste

  RouteTableOutsideOeste:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !ImportValue VPCInspeccionOesteId
      Tags:
        - Key: Name
          Value: RT-OUTSIDE-Inspeccion-Oeste

  AssociationOutsideOeste:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !ImportValue OutsideSubnetInspeccionOesteId
      RouteTableId: !Ref RouteTableOutsideOeste

  RouteOutsideToIPv6OnlyOeste:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableOutsideOeste
      DestinationCidrBlock: 10.10.0.0/16
      TransitGatewayId: !Ref TGWId

  RouteOutsideToIPv6OnlyOesteipv6:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableOutsideOeste
      DestinationIpv6CidrBlock: Cambiar por CIDR VPC IPv6
      TransitGatewayId: !Ref TGWId

  RouteOutsideToDualStackOeste:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableOutsideOeste
      DestinationCidrBlock: 10.20.0.0/16
      TransitGatewayId: !Ref TGWId

  RouteOutsideToDualStackOesteipv6:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableOutsideOeste
      DestinationIpv6CidrBlock: Cambiar por CIDR VPC Dual Stack
      TransitGatewayId: !Ref TGWId

  # Tabla de rutas: VPC IPv6 Pro
  RouteTableIPv6Only:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !ImportValue VPCIPv6OnlyId
      Tags:
        - Key: Name
          Value: RT-Comms-IPv6Only

  AssociationIPv6Only:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !ImportValue Comms-Subnet-IPv6Only
      RouteTableId: !Ref RouteTableIPv6Only

  RouteIPv6OnlyToTGWIPv4:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableIPv6Only
      DestinationCidrBlock: 172.16.0.0/16
      TransitGatewayId: !Ref TGWId

  RouteIPv6OnlyToTGWIPv6:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableIPv6Only
      DestinationIpv6CidrBlock: "64:ff9b::ac10:0/112"
      TransitGatewayId: !Ref TGWId

  RouteIPv6OnlyToTGWDualStack:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableIPv6Only
      DestinationCidrBlock: 10.20.0.0/16
      TransitGatewayId: !Ref TGWId

  RouteIPv6OnlyToTGWDualStackIPv6:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableIPv6Only
      DestinationIpv6CidrBlock: "Cambiar por CIDR VPC Dual Stack"
      TransitGatewayId: !Ref TGWId

  RouteIPv6OnlyDefaultIPv4:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableIPv6Only
      DestinationCidrBlock: 0.0.0.0/0
      TransitGatewayId: !Ref TGWId

  RouteIPv6OnlyDefaultIPv6:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableIPv6Only
      DestinationIpv6CidrBlock: "::/0"
      TransitGatewayId: !Ref TGWId

  # Tabla de rutas: VPC On-Premise
  RouteTableOnPrem:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !ImportValue VPCOnPremiseId
      Tags:
        - Key: Name
          Value: RT-Comms-OnPremise

  AssociationOnPrem:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !ImportValue Comms-Subnet-OnPrem
      RouteTableId: !Ref RouteTableOnPrem

  RouteOnPremToTGWtoIpv6VPC:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableOnPrem
      DestinationCidrBlock: 10.10.0.0/16
      TransitGatewayId: !Ref TGWId

  RouteOnPremToTGWtoDualVPC:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableOnPrem
      DestinationCidrBlock: 10.20.0.0/16
      TransitGatewayId: !Ref TGWId

  # Tabla de rutas: VPC Dual Stack
  RouteTableDualStack:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !ImportValue VPCDualStackProId
      Tags:
        - Key: Name
          Value: RT-Comms-DualStack

  AssociationDualStack:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !ImportValue Comms-Subnet-DualStack
      RouteTableId: !Ref RouteTableDualStack

  RouteDualStackToOnPrem:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableDualStack
      DestinationCidrBlock: 172.16.0.0/16
      TransitGatewayId: !Ref TGWId

  RouteDualStackToTGWIPv6:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableDualStack
      DestinationIpv6CidrBlock: "64:ff9b::ac10:0/112"
      TransitGatewayId: !Ref TGWId

  RouteDualStackToIPv6Only:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableDualStack
      DestinationCidrBlock: 10.10.0.0/16
      TransitGatewayId: !Ref TGWId

  RouteDualStackToIPv6OnlyIpv6:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableDualStack
      DestinationIpv6CidrBlock: "Cambiar por CIDR VPC Ipv6"
      TransitGatewayId: !Ref TGWId

  RouteDualStackDefaultIPv4:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableDualStack
      DestinationCidrBlock: 0.0.0.0/0
      TransitGatewayId: !Ref TGWId

  RouteDualStackDefaultIPv6:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableDualStack
      DestinationIpv6CidrBlock: "::/0"
      TransitGatewayId: !Ref TGWId
